--- a/Lunbo/package.json
+++ b/Lunbo/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
+    "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "browser-sync": "^2.17.5",
@@ -11,15 +13,26 @@
     "eslint-plugin-standard": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.0.13",
+    "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^3.1.0",
+    "gulp-order": "^1.1.1",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.2.0",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^2.2.0",
+    "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "webpack": "^1.13.3",
     "webpack-stream": "^3.2.0"
+  },
+  "dependencies": {
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
+    "babel-plugin-transform-es3-property-literals": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.15.0"
   }
 }
